--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
       <!-- javaee-web-api-bom: <groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId> -->
       <!-- Transitive -->
       <dependency>
-        <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><version>5.4.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+        <groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><version>5.4.0${POST-SNAPSHOT}</version>
       </dependency>
       <!-- BOM -->
       <dependency>
