--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
   <packaging>jar</packaging>
 
   <properties>
+    <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
+    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.aoapps.cdn.webapp</module.name>
     <javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://oss.aoapps.com/">AO OSS</a>
 / <a target="${javadoc.target}" href="https://oss.aoapps.com/cdn/">CDN</a>
