--- a/book/pom.xml
+++ b/book/pom.xml
@@ -37,6 +37,9 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
     <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.aoapps.cdn.webapp.book</module.name>
     <subproject.subpath>book/</subproject.subpath>
+    <!-- Java 17 -->
+    <javase.version>17</javase.version>
+    <javase.release>17</javase.release>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>ao-cdn-webapp</documented.artifactId>
     <documented.name>AO CDN Webapp</documented.name>
