--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 ao-cdn-webapp - Content delivery network (CDN) as a Web Application.
-Copyright (C) 2023, 2024, 2025  AO Industries, Inc.
+Copyright (C) 2023, 2024, 2025, 2026  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -168,7 +168,8 @@ along with ao-cdn-webapp.  If not, see <https://www.gnu.org/licenses/>.
               <instructions>
                 <!--
                   Releases use "Automatic-Module-Name" instead of "module-info.java"
-                  since has direct dependencies that are not yet modularized.
+                  since has direct dependencies that are not yet modularized:
+                  javax.servlet-api-3.1.0.jar
                 -->
                 <Automatic-Module-Name>${module.name}</Automatic-Module-Name>
                 <Private-Package>!.</Private-Package>
